--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/uikit": "^3.14.0",
     "jest": "28.1.0",
     "jest-environment-jsdom": "28.1.0",
+    "nock": "^13.2.9",
     "typescript": "4.6.4"
   }
 }
